# LipService

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/superpowers/plans/: 2026-04-09-vtt-mvp.md
docs/superpowers/specs/: 2026-04-09-vtt-windows-mvp-design.md
public/: overlay.html
src/: App.svelte  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sounds.rs  tray.rs
src-tauri/src/api/: mod.rs  post_process.rs  transcription.rs
src-tauri/src/audio/: encoder.rs  mod.rs  recorder.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/hotkey/: mod.rs  types.rs
src-tauri/src/pipeline/: mod.rs  types.rs
src-tauri/src/settings/: mod.rs  tests.rs  types.rs
src/lib/stores/: settings.ts
