[package]
name = "vtt"
version = "0.1.0"
edition = "2021"

[lib]
name = "vtt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vtt"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
cpal = "0.15"
hound = "3"
rubato = "0.14"
arboard = "3"
enigo = "0.2"
async-trait = "0.1"
thiserror = "2"
dirs = "5"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio-test = "0.4"
